static/style.css
* { padding: 0; margin: 0; }
        
        body, html{
            margin: 0;
            padding: 0; 
            height: 100%;
            font-family: 'Libre Franklin', sans-serif; /* i think you can directly reference the font URL here instead of linking it to the HTML -Adrian */
            letter-spacing: 0.1em;
            background-color: #d6e6ee;
         }
         
         
         header#site-header{
             background-color: #778fcf;
             /* background: linear-gradient(#72ccdf, #dcebee); */
             color: #a4c9e7;
             width: 100%;
             height: 90px;
             margin: 0 0 10px 0;
             padding: 0;
             font-size: 20px;
             text-align: center;
         }
         .hidden {
             display: none;
         }

         header img {
            height: 100px;
            width: 140px;
            margin: -25px 0 0 0;
            margin-left: auto;
	        margin-right: auto;
            display: inline-block;
        }
         
         #login{
             position: absolute;
             right: 10px;
             top: 5px;
            }
         #register{
             position: absolute;
             right: 10px;
             top: 25px;
         }
 
         details{
             margin: 10px;
           
         }
         /* Code to remove arrow:
         https://discourse.wicg.io/t/ability-to-style-summary-element-arrow/1969/3
         https://stackoverflow.com/questions/6195329/how-can-you-hide-the-arrow-that-is-displayed-by-default-on-the-html5-details-e/6202729#6202729
          */
         details summary::-webkit-details-marker {display:none;}
         details summary {list-style-type: none;}


         .warningColor {
            color:rgb(255, 217, 0);
         }
    
         .shelterWarningIcon{
             flex: 1; /* This can probably be replaced with bootstrap later */
            font-size: 22px
         }
         
 
     #sheltercontainer {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-content: flex-start;
         display: block;
         overflow: auto;
         width: 100%;
         margin: 0 auto;
     }
 
     .shelterListEntry {
         
         flex: 1;
         /*margin: 20px;*/
         /*padding: 5px;*/
         background-color:#a4c9e7;
     }

     #selected {
        background-color:none; /* CHANGE THIS IF YOU WANT, TO MAKE INDIVIDUAL BOXES HAVE DIFFERENT BACKGROUND COLORS YOU NEED TO MAKE THIS KIND OF THING AGAIN ELSEWHERE*/
     }

     .infoContainer {
         width: 100%;
        height: 100%;
        display: flex;
        flex-grow: 1;
        flex-shrink: 1;
        flex-wrap: wrap;
        justify-content: space-evenly;
     }

     .infobox {
         /*margin: 15px;
        clear: both;
        flex-wrap: wrap;
        min-width: 15%;
       max-width: 35%;*/
       min-width: 8em;
       word-wrap: break-word;
       /*flex-grow: 1;
       flex-shrink: 1;*/
    }

     .shelterSummary {
        display: flex;
        width: 100%;
    }
 
    .shelterTitle {
        flex: 9; /* This can probably be replaced with bootstrap later */
        font-weight: bold;
        font-size: 22px;
        margin: 8px;
        margin-left: 15px;
     }

     .shelterOccupancy {
        flex: 1; /* This can probably be replaced with bootstrap later */
     }

     .shelterOccupancy::after {
        /*font-size: smaller;*/
         content: " Beds";
     }


    .alignright {
        float: right;
        text-align: right;
        min-width: 55%;
        max-width: 65%;
        min-width: 75px;
        min-height: 20px;
        flex-shrink: 1;
        flex-grow: 1;
        
    }

    .alignleft {
        float: left;
        min-width: 20%;
        max-width: 28%;
        min-width: 75px;
        min-height: 20px; 
        flex-shrink: 1;
        flex-grow: 1;

    }
    
    .aligntoptitle {
        /*text-align: center;*/
        min-height: 20px;
    }
    .aligntoptext {
        /*text-align: center;*/
        min-height: 40px;
    }

/*CHECKMARK STUFF BEGINS HERE ! ! ! BE ADVISED ! ! !*/
    /* Customize the label (the container) */
.checkBoxContainer {
    display: block;
    position: relative;
    padding-left: 30px;
    margin-right: 10px;
    margin-bottom: 12px;
    margin-top: 15px;
    cursor: pointer;
    font-size: 15px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }
  
  /* Hide the browser's default checkbox */
  .checkBoxContainer input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
  }
  
  /* Create a custom checkbox */
  .checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    background-color: #eee;
    outline: 1px solid #000000;
  }
  
  /* On mouse-over, add a grey background color 
  .container:hover input ~ .checkmark {
    background-color: #ccc;
  }
  
  /* When the checkbox is checked, add a blue background */
  .checkBoxContainer input:checked ~ .checkmark {
    background-color: #2196F3;
  }
  
  /* Create the checkmark/indicator (hidden when not checked) */
  .checkmark:after {
    content: "";
    position: absolute;
    display: none;
  }
  
  /* Show the checkmark when checked */
  .checkBoxContainer input:checked ~ .checkmark:after {
    display: block;
  }

  /* Style the checkmark/indicator */
.checkBoxContainer .checkmark:after {
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
  }

  

input[type=checkbox] {
  /* Double-sized Checkboxes */
  transform: scale(2, 2);
  padding: 10px;
}

section#content {
    margin-bottom: 25px
}


  section#site-footer{
      height: 25px;
      width: 100%;
      text-align: center;
  }
  #site-footer{
      text-align: center;
  }



#calendar{
    margin-left:auto;
    margin-right:auto;
    text-align: center;
}

  .dropbtn1 {
      background-color: #778fcf;
      color: white;
      padding: 16px;
      font-size: 16px;
      border: none;
      height: 64px;
  }

  .dropdown1 {
      position: absolute;
      display: inline-block;
      top:0;
      right: 0;
      margin-top: 1px;
      margin-left: 2px;
      
  }

  .dropdown-content1 {
      display: none;
      position: absolute;
      background-color: #f1f1f1;
      min-width: 160px;
      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
      z-index: 1;
      right: 0;
      
  }

  .dropdown-content1 a{
      color: black;
      padding: 12px 16px;
      text-decoration: none;    
      display: block;
  }

  .dropdown-content1 a:hover {background-color: #ddd;}

  .dropdown1:hover .dropdown-content1 {display: block;}

  .dropdown1:hover .dropbtn1 {background-color: #066CE2;}

.rightsArticle{
    text-align: center;
    background-color: #fff;
    margin-left: 25px;
    margin-right: 25px;
}

#fistImg{
    text-align: center;
    width: 50px;
    height: auto;
}

.rightsText{
    vertical-align: middle;
    text-align: justify; 
    margin-left:40px;
    margin-right:40px;

}
#ventoTitle{
    text-decoration: underline;
}

.aboutText{
    vertical-align: middle;
    text-align: justify; 
    margin-left:40px;
    margin-right:40px;

}

#manageTitle{
    text-align: center;
}
  .dropdown:hover .dropbtn {background-color: #066CE2;}



  /* OVERRIDING A BUUUUUUUUNCH OF STUFF FOR CUSTOM BUTTOMS*/
  
  .btn-headerprimary { 
    color: #ffffff; 
    background-color: #778FCF; 
    border-color: #778FCF; 
  } 
   
  .btn-headerprimary:hover, 
  .btn-headerprimary:focus, 
  .btn-headerprimary:active, 
  .btn-headerprimary.active, 
  .open .dropdown-toggle.btn-headerprimary { 
    color: #ffffff; 
    background-color: rgb(92, 105, 221); 
    border-color: #778FCF; 
  } 
   
  .btn-headerprimary:active, 
  .btn-headerprimary.active, 
  .open .dropdown-toggle.btn-headerprimary { 
    background-image: none; 
  } 
   
  .btn-headerprimary.disabled, 
  .btn-headerprimary[disabled], 
  fieldset[disabled] .btn-headerprimary, 
  .btn-headerprimary.disabled:hover, 
  .btn-headerprimary[disabled]:hover, 
  fieldset[disabled] .btn-headerprimary:hover, 
  .btn-headerprimary.disabled:focus, 
  .btn-headerprimary[disabled]:focus, 
  fieldset[disabled] .btn-headerprimary:focus, 
  .btn-headerprimary.disabled:active, 
  .btn-headerprimary[disabled]:active, 
  fieldset[disabled] .btn-headerprimary:active, 
  .btn-headerprimary.disabled.active, 
  .btn-headerprimary[disabled].active, 
  fieldset[disabled] .btn-headerprimary.active { 
    background-color: #778FCF; 
    border-color: #778FCF; 
  } 
   
  .btn-headerprimary .badge { 
    color: #778FCF; 
    background-color: #ffffff; 
  }

